--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:10008",
-      "sslPort": 44305
+      "applicationUrl": "http://localhost:5228",
+      "sslPort": 44370
     }
   },
   "profiles": {
@@ -13,25 +13,37 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5216",
+      "launchUrl": "swagger",
+      "applicationUrl": "http://localhost:5017",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "CORECLR_ENABLE_PROFILING": "1",
+        "CORECLR_PROFILER": "{36032161-FFC0-4B61-B559-F6C5D41BAE5A}",
+        "NEWRELIC_INSTALL_PATH": "C:\\Program Files\\New Relic\\.NET Agent\\",
+        "CORECLR_NEWRELIC_HOME": "C:\\ProgramData\\New Relic\\.NET Agent\\"
       }
     },
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7259;http://localhost:5216",
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7138;http://localhost:5017",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "CORECLR_ENABLE_PROFILING": "1",
+        "CORECLR_PROFILER": "{36032161-FFC0-4B61-B559-F6C5D41BAE5A}",
+        "NEWRELIC_INSTALL_PATH": "C:\\Program Files\\New Relic\\.NET Agent\\",
+        "CORECLR_NEWRELIC_HOME": "C:\\ProgramData\\New Relic\\.NET Agent\\"
       }
     },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "CORECLR_ENABLE_PROFILING": "1"
       }
     }
   }
